--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
     <title>AI Denný Prehľad</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -24,6 +24,12 @@
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc; /* Slate-50 */
+        /* Support for iOS Safe Areas */
+        padding-top: env(safe-area-inset-top);
+        padding-bottom: env(safe-area-inset-bottom);
+        height: 100vh; /* Fallback */
+        height: 100dvh;
+        overflow: hidden; /* Prevent body scroll, let app handle it */
       }
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
